tests/output/self_hosted/no_generic_error.txt
tests/no_generic_error.oomph:1: error: no generic type named Asdf

    func foo(Asdf[Int] bar):
             ^^^^

